SIRIUS FBMN integration

--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -112,7 +112,7 @@
     "                hits.append(hit)\n",
     "    DF_features[\"GNPS_IDs\"][i] = \" ## \".join(hits)\n",
     "\n",
-    "DF_features.to_csv(os.path.join(path, \"GNPS_annotated_feature_matrix.tsv\"), sep=\"\\t\", index = False)\n",
+    "DF_features.to_csv(os.path.join(path, \"GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)\n",
     "DF_features"
    ]
   },
@@ -188,7 +188,6 @@
     "DF_SIRIUS[\"featureId\"]= DF_SIRIUS[\"featureId\"].str.replace(r\"id_\", \"\")\n",
     "for i, rows in DF_SIRIUS.iterrows():\n",
     "    DF_SIRIUS[\"featureId\"][i]= DF_SIRIUS[\"featureId\"][i].split(\",\")\n",
-    "DF_SIRIUS.to_csv(os.path.join(\"results\", \"annotations\", \"SIRIUS_library.tsv\"), sep=\"\\t\", index=None)\n",
     "DF_SIRIUS"
    ]
   },
@@ -224,7 +223,6 @@
     "DF_CSI[\"featureId\"]= DF_CSI[\"featureId\"].str.replace(r\"id_\", \"\")\n",
     "for i, rows in DF_CSI.iterrows():\n",
     "    DF_CSI[\"featureId\"][i]= DF_CSI[\"featureId\"][i].split(\",\")\n",
-    "DF_CSI.to_csv(os.path.join(\"results\", \"annotations\", \"CSI_library.tsv\"), sep=\"\\t\", index=None)\n",
     "DF_CSI"
    ]
   },
@@ -291,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF_features.to_csv(os.path.join(\"results\", \"annotations\", \"FeatureMatrix_SIRIUS_CSI.csv\"), sep=\"\\t\", index= None)"
+    "DF_features.to_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index= None)"
    ]
   },
   {
