--- a/7_FBMN_SIRIUS_integration.ipynb
+++ b/7_FBMN_SIRIUS_integration.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
    "source": [
     "Matrix= pd.read_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\"), sep=\"\\t\")\n",
     "Matrix[\"id\"]= Matrix[\"id\"].astype(str)\n",
-    "Matrix[\"feature_ids\"]= [ids[1:-1].split(\",\") for ids in Matrix[\"feature_ids\"]]\n",
+    "Matrix[\"feature_ids\"]= Matrix[\"feature_ids\"].values.tolist()\n",
     "Matrix"
    ]
   },
@@ -118,7 +118,6 @@
     "DF_SIRIUS= pd.concat(list_of_df,ignore_index=True)\n",
     "DF_SIRIUS= DF_SIRIUS.drop(columns=\"index\")\n",
     "DF_SIRIUS[\"opt_global_featureId\"]= DF_SIRIUS[\"opt_global_featureId\"].str.replace(r\"id_\", \"\")\n",
-    "DF_SIRIUS[\"opt_global_featureId\"]= [ids[1:-1].split(\",\") for ids in DF_SIRIUS[\"opt_global_featureId\"]]\n",
     "DF_SIRIUS"
    ]
   },
@@ -133,11 +132,10 @@
     "for i, Pred_id in zip(DF_SIRIUS.index, DF_SIRIUS[\"opt_global_featureId\"]):\n",
     "    hits = []\n",
     "    for scans, feature_id in zip(Matrix[\"SCANS\"], Matrix[\"feature_ids\"]): \n",
-    "        for x,y in zip(feature_id, Pred_id):\n",
-    "                if x==y:\n",
-    "                    hit = f\"{scans}\"\n",
-    "                    if hit not in hits:\n",
-    "                        hits.append(hit)\n",
+    "        if Pred_id in feature_id:\n",
+    "            hit = f\"{scans}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
     "    DF_SIRIUS[\"SCANS\"][i] = \" ## \".join(hits)\n",
     "DF_SIRIUS"
    ]
@@ -168,7 +166,6 @@
     "DF_CSI= pd.concat(list_of_df,ignore_index=True)\n",
     "DF_CSI= DF_CSI.drop(columns=\"index\")\n",
     "DF_CSI[\"opt_global_featureId\"]= DF_CSI[\"opt_global_featureId\"].str.replace(r\"id_\", \"\")\n",
-    "DF_CSI[\"opt_global_featureId\"]= [ids[1:-1].split(\",\") for ids in DF_CSI[\"opt_global_featureId\"]]\n",
     "DF_CSI"
    ]
   },
@@ -183,11 +180,10 @@
     "for i, Pred_id in zip(DF_CSI.index, DF_CSI[\"opt_global_featureId\"]):\n",
     "    hits = []\n",
     "    for scans, feature_id in zip(Matrix[\"SCANS\"], Matrix[\"feature_ids\"]): \n",
-    "        for x,y in zip(feature_id, Pred_id):\n",
-    "            if x==y:\n",
-    "                hit = f\"{scans}\"\n",
-    "                if hit not in hits:\n",
-    "                    hits.append(hit)\n",
+    "        if Pred_id in feature_id:\n",
+    "            hit = f\"{scans}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
     "    DF_CSI[\"SCANS\"][i] = \" ## \".join(hits)\n",
     "DF_CSI"
    ]
@@ -223,14 +219,22 @@
     "\n",
     "    # Adding CSI:FingerID information\n",
     "    for result in DF_CSI.to_dict(orient=\"records\"):\n",
-    "        scan = str(result[\"opt_global_compoundScanNumber\"])\n",
+    "        scan = str(result[\"SCANS\"])\n",
     "        if scan in G:\n",
     "            G.nodes[scan][\"csifingerid:smiles\"] = result[\"smiles\"]\n",
     "            G.nodes[scan][\"csifingerid:Confidence_Score\"] = result[\"best_search_engine_score[1]\"]\n",
     "            G.nodes[scan][\"csifingerid:dbflags\"] = result[\"opt_global_dbflags\"]\n",
+    "            G.nodes[scan][\"csifingerid:description\"] = result[\"description\"]\n",
     "\n",
     "    nx.write_graphml(G, os.path.join(\"results\", \"GNPSexport\", \"fbmn_sirius.graphml\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
