GNPS annotations through SCAN ids

--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import glob\n",
-    "import os"
+    "import os\n",
+    "from pyteomics import mgf, auxiliary"
    ]
   },
   {
@@ -39,10 +40,13 @@
    "source": [
     "FeatureMatrix= os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\")\n",
     "DF_features= pd.read_csv(FeatureMatrix, sep=\"\\t\")\n",
-    "DF_features=DF_features.set_index([\"mz\", \"RT\", \"feature_ids\"])\n",
-    "DF_features= DF_features.drop(columns=[\"charge\", \"quality\", \"id\"])\n",
+    "DF_features= DF_features.drop(columns=[\"charge\", \"quality\"])\n",
     "DF_features= DF_features.fillna(0)\n",
-    "DF_features.columns = DF_features.columns.str.replace(\"results/Interim/mzML/PCpeak_\", \"\")\n",
+    "DF_features[\"feature_ids\"]= DF_features[\"feature_ids\"].str.replace(r\"[\", \"\")\n",
+    "DF_features[\"feature_ids\"]= DF_features[\"feature_ids\"].str.replace(r\"]\", \"\")\n",
+    "\n",
+    "for i, rows in DF_features.iterrows():\n",
+    "    DF_features[\"feature_ids\"][i]= DF_features[\"feature_ids\"][i].split(\",\")\n",
     "DF_features"
    ]
   },
@@ -50,98 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `1) GNPS annotations`\n",
-    "\n",
-    "This step requires an independent job at GNPS Spectral Library Search (input: raw mzML files)\n",
-    "See documentation: https://ccms-ucsd.github.io/GNPSDocumentation/librarysearch/ \n",
-    "\n",
-    "When the job is finished, import all identifications from GNPS, save the .TSV table under the resources directory and \"clean up\" the table:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list= glob.glob(os.path.join(\"resources\", \"*.tsv\"))\n",
-    "for file in list:   \n",
-    "    df= pd.read_csv(file, sep=\"\\t\")\n",
-    "    df.drop(df.index[df['IonMode'] == \"negative\"], inplace=True)\n",
-    "    df.drop(df.index[df['MZErrorPPM'] > 10.0], inplace=True)\n",
-    "    df=df.filter([\"Compound_Name\", \"RT_Query\", \"Precursor_MZ\"])\n",
-    "    df=df.rename(columns= {\"RT_Query\": \"RetentionTime\"})\n",
-    "    GNPS=df.drop_duplicates(subset=\"Compound_Name\", keep='first')\n",
-    "GNPS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Annotate the features detected by GNPS according to mz and RT (mz tolerance 10 ppm and RT tolerance 20 seconds: instrument and method-dependent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path= os.path.join(\"results\", \"annotations\")\n",
-    "isExist= os.path.exists(path)\n",
-    "if not isExist:\n",
-    "    os.mkdir(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DF_features.insert(0, \"GNPS_IDs\", \"\")\n",
-    "\n",
-    "for i, mz, rt in zip(DF_features.index, DF_features[\"mz\"], DF_features[\"RT\"]):\n",
-    "    hits = []\n",
-    "    for name, GNPS_mz, GNPS_rt, in zip(GNPS[\"Compound_Name\"], GNPS[\"Precursor_MZ\"], GNPS[\"RetentionTime\"]):\n",
-    "        mass_delta = (abs(GNPS_mz-mz)/GNPS_mz)*1000000.0 if GNPS_mz != 0 else np.nan\n",
-    "        if (GNPS_rt >= rt-20.0) & (GNPS_rt <= rt+20.0) & (mass_delta<= 10.0):\n",
-    "            hit = f\"{name}\"\n",
-    "            if hit not in hits:\n",
-    "                hits.append(hit)\n",
-    "    DF_features[\"GNPS_IDs\"][i] = \" ## \".join(hits)\n",
-    "\n",
-    "DF_features.to_csv(os.path.join(path, \"GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)\n",
-    "DF_features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Keep the unannotated features only"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FeatureMatrix= DF_features[DF_features.GNPS_IDs == \"\"]\n",
-    "FeatureMatrix= FeatureMatrix.drop(columns= \"GNPS_IDs\")\n",
-    "FeatureMatrix= FeatureMatrix.set_index([\"RT\", \"mz\"])\n",
-    "FeatureMatrix_tocsv= FeatureMatrix.reset_index()\n",
-    "FeatureMatrix_tocsv.to_csv(os.path.join(\"results\", \"annotations\", \"FeatureMatrix_unknowns.tsv\"), sep=\"\\t\", index =None)\n",
-    "FeatureMatrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `2) SIRIUS and CSI:FingerID annotations`\n",
+    "#### `1) SIRIUS and CSI:FingerID annotations`\n",
     "\n",
     "Create a matrix with all SIRIUS and CSI:FingerID formula and structural predictions, only choose #1 rankings predictions and combine the dataframes to annotate formula and structural predictions according to RT and mz:"
    ]
@@ -151,16 +64,6 @@
    "metadata": {},
    "source": [
     "df_formulas will likely contain duplicate formulas that could be either isomeric, isobaric compounds, or identical compounds (with identical RT and mz). Here, we want to collapse the identical, repeating compounds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DF_features= DF_features.reset_index()\n",
-    "DF_features"
    ]
   },
   {
@@ -186,8 +89,6 @@
     "DF_SIRIUS= DF_SIRIUS.drop(columns=\"index\")\n",
     "DF_SIRIUS= DF_SIRIUS.rename(columns= {\"chemical_formula\": \"formulas\", \"exp_mass_to_charge\": \"mz\", \"retention_time\": \"RT\"})\n",
     "DF_SIRIUS[\"featureId\"]= DF_SIRIUS[\"featureId\"].str.replace(r\"id_\", \"\")\n",
-    "for i, rows in DF_SIRIUS.iterrows():\n",
-    "    DF_SIRIUS[\"featureId\"][i]= DF_SIRIUS[\"featureId\"][i].split(\",\")\n",
     "DF_SIRIUS"
    ]
   },
@@ -221,8 +122,6 @@
     "DF_CSI= DF_CSI.drop(columns=\"index\")\n",
     "DF_CSI= DF_CSI.rename(columns= {\"chemical_formula\": \"formulas\", \"exp_mass_to_charge\": \"mz\", \"retention_time\": \"RT\", \"description\":\"name\"})\n",
     "DF_CSI[\"featureId\"]= DF_CSI[\"featureId\"].str.replace(r\"id_\", \"\")\n",
-    "for i, rows in DF_CSI.iterrows():\n",
-    "    DF_CSI[\"featureId\"][i]= DF_CSI[\"featureId\"][i].split(\",\")\n",
     "DF_CSI"
    ]
   },
@@ -244,11 +143,10 @@
     "for i, id in zip(DF_features.index, DF_features[\"feature_ids\"]):\n",
     "    hits = []\n",
     "    for name, Pred_id in zip(DF_SIRIUS[\"formulas\"], DF_SIRIUS[\"featureId\"]): \n",
-    "        for x,y in zip(id,Pred_id):\n",
-    "            if x==y:\n",
-    "                hit = f\"{name}\"\n",
-    "                if hit not in hits:\n",
-    "                    hits.append(hit)\n",
+    "        if Pred_id in id:\n",
+    "            hit = f\"{name}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
     "    DF_features[\"SIRIUS_predictions\"][i] = \" ## \".join(hits)\n",
     "DF_features"
    ]
@@ -268,8 +166,7 @@
     "    hits2= []\n",
     "    hits3=[]\n",
     "    for name, formula, smiles, Pred_id in zip(DF_CSI[\"name\"], DF_CSI[\"formulas\"], DF_CSI[\"smiles\"], DF_CSI[\"featureId\"]): \n",
-    "        for x,y in zip(id,Pred_id):\n",
-    "            if (x==y)& (formula in sirius):\n",
+    "        if (Pred_id in id) & (formula in sirius):\n",
     "                hit1 = f\"{name}\"\n",
     "                hit2 = f\"{formula}\"\n",
     "                hit3= f\"{smiles}\"\n",
@@ -290,6 +187,159 @@
    "outputs": [],
    "source": [
     "DF_features.to_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index= None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `2) GNPS annotations`\n",
+    "\n",
+    "This step requires the file under the DB_result directory (downloaded cytoscape data) after FBMN. Move the .TSV table under the resources directory and annotate the FeatureMatrix according to SCAN numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list= glob.glob(os.path.join(\"resources\", \"*.tsv\"))\n",
+    "for file in list:   \n",
+    "    df= pd.read_csv(file, sep=\"\\t\")\n",
+    "    df.drop(df.index[df['IonMode'] == \"negative\"], inplace=True)\n",
+    "    df.drop(df.index[df['MZErrorPPM'] > 10.0], inplace=True)\n",
+    "    GNPS=df.drop_duplicates(subset=\"Compound_Name\", keep='first')\n",
+    "    GNPS[\"#Scan#\"]= GNPS[\"#Scan#\"].astype(str)\n",
+    "GNPS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annotate the features detected by GNPS according to mz and RT (mz tolerance 10 ppm and RT tolerance 20 seconds: instrument and method-dependent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= os.path.join(\"results\", \"annotations\")\n",
+    "isExist= os.path.exists(path)\n",
+    "if not isExist:\n",
+    "    os.mkdir(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add the SCAN number information to the annotated FeatureMatrix in order to match the GNPS MSMS library matching results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix= pd.read_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_annotated_FeatureMatrix.tsv\"), sep=\"\\t\")\n",
+    "Matrix[\"id\"]= Matrix[\"id\"].astype(str)\n",
+    "Matrix[\"feature_ids\"]= Matrix[\"feature_ids\"].values.tolist()\n",
+    "Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Turn the MGF file to a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
+    "file= mgf.MGF(source=path, use_header=True, convert_arrays=2, read_charges=True, read_ions=False, dtype=None, encoding=None)\n",
+    "parameters=[]\n",
+    "for spectrum in file:\n",
+    "    parameters.append(spectrum['params'])\n",
+    "mgf_file= pd.DataFrame(parameters)\n",
+    "mgf_file[\"feature_id\"]= mgf_file[\"feature_id\"].str.replace(r\"e_\", \"\")\n",
+    "mgf_file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add SCANS column to the Feature Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix.insert(0, \"SCANS\", \"\")\n",
+    "for i, id in zip(Matrix.index, Matrix[\"id\"]):\n",
+    "    hits = []\n",
+    "    for scan, feature_id in zip(mgf_file[\"scans\"], mgf_file[\"feature_id\"]): \n",
+    "        if feature_id==id:\n",
+    "            hit = f\"{scan}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
+    "    Matrix[\"SCANS\"][i] = \" ## \".join(hits)\n",
+    "Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix.insert(0, \"GNPS_IDs\", \"\")\n",
+    "\n",
+    "for i, scan in zip(Matrix.index, Matrix[\"SCANS\"]):\n",
+    "    hits = []\n",
+    "    for name, scan_number, in zip(GNPS[\"Compound_Name\"], GNPS[\"#Scan#\"]):\n",
+    "        if scan==scan_number:\n",
+    "            hit = f\"{name}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
+    "    Matrix[\"GNPS_IDs\"][i] = \" ## \".join(hits)\n",
+    "\n",
+    "Matrix.to_csv(os.path.join(\"results\", \"annotations\", \"GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)\n",
+    "Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keep the unannotated features only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix= Matrix[Matrix.GNPS_IDs == \"\"]\n",
+    "Matrix= Matrix.drop(columns= \"GNPS_IDs\")\n",
+    "Matrix= Matrix.set_index([\"RT\", \"mz\"])\n",
+    "Matrix_tocsv= Matrix.reset_index()\n",
+    "Matrix_tocsv.to_csv(os.path.join(\"results\", \"annotations\", \"Matrix_unknowns.tsv\"), sep=\"\\t\", index =None)\n",
+    "Matrix"
    ]
   },
   {
