metadata , documentation, smiles

--- a/VisualiseSMILES.ipynb
+++ b/VisualiseSMILES.ipynb
@@ -22,8 +22,8 @@
     "import molplotly\n",
     "\n",
     "# load a DataFrame with smiles\n",
-    "DF = pd.read_csv('results/annotations/annotated_FeatureMatrix.tsv')\n",
-    "DF= DF.rename(columns={\"CSI_predictions_smiles\":\"smiles\", \"20220426_UMETAB266_POS_Thiostreptone\":\"Thiostreptone\",\"20220510_UMETAB266_POS_Gentamycin_10uL\": \"Gentamycin\", \"20220426_UMETAB266_POS_Kanamycin\":\"Kanamycin\", \"20220510_UMETAB266_POS_Apramycin_10uL\": \"Apramycin\", \"20220510_UMETAB266_NEG_Apramycin_10uL\":\"Apramycin_neg\", \"20220510_UMETAB266_POS_Globomycin_10uL\":\"Globomycin\", \"20220426_UMETAB266_POS_Tetracycline\":\"Tetracycline\", \"20220510_UMETAB266_POS_Streptomycin_10uL\":\"Streptomycin\", \"20220426_UMETAB266_POS_GermicidinB\": \"GermicidinB\",'20220426_UMETAB266_POS_GermicidinA': \"GermicidinA\", '20220426_UMETAB266_POS_HygromycinB': \"HygromycinB\",'20220426_UMETAB266_POS_Ampicillin': \"Ampicillin\",'20220510_UMETAB266_POS_Chloramphenicol_10uL': \"Chloramphenicol\"})\n",
+    "DF = pd.read_csv('results/annotations/commercial_std/annotated_FeatureMatrix_commercial_std.csv')\n",
+    "DF= DF.rename(columns={\"CSI_predictions_smiles\":\"smiles\"})\n",
     "DF = DF[DF['smiles'].notna()]\n",
     "DF= DF.fillna(0)\n",
     "DF"
