--- a/5_SIRIUS_CSI.ipynb
+++ b/5_SIRIUS_CSI.ipynb
@@ -239,11 +239,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "1d92193107b2c1fde5349325fa7e4180df63966062ebb6172612daf2925f9acf"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 ('pyopenms')",
    "language": "python",
    "name": "python3"
   },
@@ -257,9 +254,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
