correct negative mode

--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -386,8 +386,7 @@
    "source": [
     "#### `8) Metabolite adduct decharger` \n",
     "\n",
-    "For each peak, this algorithm reconstructs neutral masses by enumerating all possible adducts with matching charge. You can add the list of adduct files and database files for the algorithm to parse through.\n",
-    "With SIRIUS, an algorithm that is later used, you are only able to use singly charged adducts so charges higher than 1 are filtered out. \n",
+    "For each peak, this algorithm reconstructs neutral masses by enumerating all possible adducts with matching charge. Here, we do not save the file with neutral masses, but only the feature files that contain adduct annotations. You can add the list of adduct for the algorithm to parse through. SIRIUS, an algorithm that is later used, is only able to compute singly charged adducts so charges higher than 1 are filtered out. Use adduct list: [b\"H-1:-:1\", b\"H-2O-1:0:0.05\", b\"CH2O2:0:0.5\"] for negative mode.\n",
     "\n",
     "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/UTILS_MetaboliteAdductDecharger.html"
    ]
