--- a/3_Requantification(optional).ipynb
+++ b/3_Requantification(optional).ipynb
@@ -133,6 +133,8 @@
     "DF_features[\"Charge\"]= DF_features[\"Charge\"].astype(str)\n",
     "DF_features[\"Mass\"]= DF_features[\"Mass\"].astype(float)\n",
     "\n",
+    "#For positive ionisation: comment this for negative ESI\n",
+    "\n",
     "for ind in DF_features.index:\n",
     "    if DF_features[\"Charge\"][ind] == \"0\":\n",
     "        DF_features.loc[ind, \"Mass\"]= DF_features.loc[ind,\"Mass\"]- 1.007825\n",
@@ -155,6 +157,34 @@
     "DF_features= DF_features[[\"CompoundName\",\"SumFormula\", \"Mass\",\"Charge\",\"RetentionTime\",\"RetentionTimeRange\", \"IsoDistribution\"]]\n",
     "DF_features.to_csv(os.path.join(path, \"MetaboliteIdentification.tsv\"), sep=\"\\t\", index= None)\n",
     "DF_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For negative ionisation: uncomment this for negative ESI\n",
+    "    # for ind in DF_features.index:\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"0\":\n",
+    "    #         DF_features.loc[ind, \"Mass\"]= DF_features.loc[ind,\"Mass\"]+ 1.007825\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"1\":\n",
+    "    #         DF_features.loc[ind, \"Mass\"]= DF_features.loc[ind,\"Mass\"]+ 1.007825\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"2\":\n",
+    "    #         DF_features.loc[ind, \"Mass\"]= (DF_features.loc[ind,\"Mass\"]*2)+ 2.015650\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"3\":\n",
+    "    #         DF_features.loc[ind, \"Mass\"]= (DF_features.loc[ind,\"Mass\"]*3)+ 3.023475\n",
+    "    # DF_features[\"Charge\"]= DF_features[\"Charge\"].astype(str)\n",
+    "    # for ind in DF_features.index:\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"0\":\n",
+    "    #         DF_features.loc[ind, \"Charge\"]= \"-1\"\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"1\":\n",
+    "    #         DF_features.loc[ind, \"Charge\"]= \"-\" + DF_features.loc[ind,\"Charge\"]\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"2\":\n",
+    "    #         DF_features.loc[ind, \"Charge\"]= \"-\" + DF_features.loc[ind,\"Charge\"]\n",
+    "    #     if DF_features[\"Charge\"][ind] == \"3\":\n",
+    "    #         DF_features.loc[ind, \"Charge\"]= \"-\" + DF_features.loc[ind,\"Charge\"]"
    ]
   },
   {
