--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Matrix.insert(0, \"GNPS_IDs\", \"\")\n",
+    "Matrix.insert(0, \"GNPS\", \"\")\n",
     "\n",
     "for i, scan in zip(Matrix.index, Matrix[\"SCANS\"]):\n",
     "    hits = []\n",
@@ -315,7 +315,7 @@
     "            hit = f\"{name}\"\n",
     "            if hit not in hits:\n",
     "                hits.append(hit)\n",
-    "    Matrix[\"GNPS_IDs\"][i] = \" ## \".join(hits)\n",
+    "    Matrix[\"GNPS\"][i] = \" ## \".join(hits)\n",
     "\n",
     "Matrix.to_csv(os.path.join(\"results\", \"annotations\", \"GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)\n",
     "Matrix"
@@ -334,8 +334,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Matrix= Matrix[Matrix.GNPS_IDs == \"\"]\n",
-    "Matrix= Matrix.drop(columns= \"GNPS_IDs\")\n",
+    "Matrix= Matrix[Matrix.GNPS == \"\"]\n",
+    "Matrix= Matrix.drop(columns= \"GNPS\")\n",
     "Matrix= Matrix.set_index([\"RT\", \"mz\"])\n",
     "Matrix_tocsv= Matrix.reset_index()\n",
     "Matrix_tocsv.to_csv(os.path.join(\"results\", \"annotations\", \"Matrix_unknowns.tsv\"), sep=\"\\t\", index =None)\n",
