Spectral Matcher added

--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -10,7 +10,12 @@
     "import pandas as pd\n",
     "import glob\n",
     "import os\n",
-    "from pyteomics import mgf, auxiliary"
+    "from pyteomics import mgf, auxiliary\n",
+    "import sys\n",
+    "sys.path.insert(0, '/Users/eeko/devel/openms_build/pyOpenMS')\n",
+    "from pyopenms import *\n",
+    "import pyteomics\n",
+    "from pyteomics import mztab\n"
    ]
   },
   {
@@ -19,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path= os.path.join(\"results\", \"interim\", \"analysis\")\n",
+    "path= os.path.join(\"results\", \"interim\", \"annotations\")\n",
     "isExist= os.path.exists(path)\n",
     "if not isExist:\n",
     "    os.mkdir(path)"
@@ -193,9 +198,165 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `2) GNPS annotations`\n",
+    "#### `2) Spectral matching`\n",
     "\n",
-    "This step requires the file under the DB_result directory (downloaded cytoscape data) after FBMN. Move the .TSV table under the resources directory and annotate the FeatureMatrix according to SCAN numbers:"
+    "This step matches spectra with an MGF library and annotates the feature matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DF_features= pd.read_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_annotated_FeatureMatrix.tsv\"), sep=\"\\t\") #here we import the already annotated with sirius and csi predictions feature matrix\n",
+    "DF_features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the MGF file to an MSExperiment format:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mgf_file= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
+    "exp = MSExperiment()\n",
+    "MascotGenericFile().load(mgf_file, exp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perform spectral matching with a library in MGF format that is located under \"resources\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "database= glob.glob(os.path.join(\"resources\", \"GNPS-LIBRARY.mgf\"))\n",
+    "speclib = MSExperiment()\n",
+    "MascotGenericFile().load(mgf_file, speclib)\n",
+    "mztab= MzTab()\n",
+    "output_mztab= os.path.join(\"results\", \"interim\", \"annotations\", \"MSMS.mzTab\")\n",
+    "out_merged= \"\"\n",
+    "MSMS_match= MetaboliteSpectralMatching()\n",
+    "MSMS_match_par = MSMS_match.getDefaults()\n",
+    "MSMS_match_par.setValue('merge_spectra', 'false')\n",
+    "MSMS_match.setParameters(MSMS_match_par)\n",
+    "MSMS_match.run(exp, speclib, mztab,  String(out_merged))\n",
+    "MzTabFile().store(output_mztab, mztab)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean up the mzTab to a dataframe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectralmatch=  pyteomics.mztab.MzTab(output_mztab, encoding=\"UTF8\", table_format=\"df\")\n",
+    "spectralmatch.metadata\n",
+    "df= spectralmatch.small_molecule_table\n",
+    "spectralmatch_DF= df.drop(columns= [\"identifier\", \"inchi_key\", \"modifications\", \"calc_mass_to_charge\", \"opt_adduct_ion\", \"taxid\", \"species\", \"database\", \"spectra_ref\", \"search_engine\", \"opt_sec_id\",\"smallmolecule_abundance_std_error_study_variable[1]\", \"smallmolecule_abundance_stdev_study_variable[1]\", \"smallmolecule_abundance_study_variable[1]\", \"chemical_formula\"])\n",
+    "spectralmatch_DF=spectralmatch_DF[spectralmatch_DF[\"opt_ppm_error\"] <= 10] \n",
+    "spectralmatch_DF=spectralmatch_DF[spectralmatch_DF[\"opt_ppm_error\"] >= -10]\n",
+    "spectralmatch_DF=spectralmatch_DF[spectralmatch_DF[\"opt_match_score\"] >= 60]\n",
+    "spectralmatch_DF[\"opt_spec_native_id\"]= spectralmatch_DF[\"opt_spec_native_id\"].str.replace(r\"index=\", \"\")\n",
+    "spectralmatch_DF       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annotate the feature matrix with the spectral matches:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
+    "file= mgf.MGF(source=path, use_header=True, convert_arrays=2, read_charges=True, read_ions=False, dtype=None, encoding=None)\n",
+    "parameters=[]\n",
+    "for spectrum in file:\n",
+    "    parameters.append(spectrum['params'])\n",
+    "mgf_file= pd.DataFrame(parameters)\n",
+    "mgf_file[\"feature_id\"]= mgf_file[\"feature_id\"].str.replace(r\"e_\", \"\")\n",
+    "\n",
+    "df= exp.get_df() #mzML loaded in MSExperiment()\n",
+    "for spec in exp:\n",
+    "    df[\"index\"]= [spec.getNativeID() for spec in exp]\n",
+    "    df[\"SCANS\"]= [spec.getMetaValue(\"Scan_ID\") for spec in exp]\n",
+    "df[\"index\"]= df[\"index\"].str.replace(r\"index=\", \"\")\n",
+    "\n",
+    "spectralmatch_DF.insert(0, \"SCANS\", \"\")\n",
+    "\n",
+    "for i, idx in zip(spectralmatch_DF.index, spectralmatch_DF[\"opt_spec_native_id\"]):\n",
+    "    hits = []\n",
+    "    for index, scan_number, in zip(df[\"index\"], df[\"SCANS\"]):\n",
+    "        if idx==index:\n",
+    "            hit = f\"{scan_number}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
+    "    spectralmatch_DF[\"SCANS\"][i] = \" ## \".join(hits)\n",
+    "\n",
+    "DF_features[\"id\"]= DF_features[\"id\"].astype(str)\n",
+    "DF_features[\"feature_ids\"]= DF_features[\"feature_ids\"].values.tolist()\n",
+    "DF_features.insert(0, \"SCANS\", \"\")\n",
+    "for i, id in zip(DF_features.index, DF_features[\"id\"]):\n",
+    "    hits = []\n",
+    "    for scan, feature_id in zip(mgf_file[\"scans\"], mgf_file[\"feature_id\"]): \n",
+    "        if feature_id==id:\n",
+    "            hit = f\"{scan}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
+    "    DF_features[\"SCANS\"][i] = \" ## \".join(hits)\n",
+    "\n",
+    "DF_features.insert(0, \"description\", \"\")\n",
+    "DF_features.insert(0, \"smiles\", \"\")\n",
+    "\n",
+    "for i, scan in zip(DF_features.index, DF_features[\"SCANS\"]):\n",
+    "    hits1 = []\n",
+    "    hits2=[]\n",
+    "    for name, smiles, scan_number, in zip(spectralmatch_DF[\"description\"],spectralmatch_DF[\"smiles\"], spectralmatch_DF[\"SCANS\"]):\n",
+    "        if scan==scan_number:\n",
+    "            hit1 = f\"{name}\"\n",
+    "            hit2 = f\"{smiles}\"\n",
+    "            if hit1 not in hits1:\n",
+    "                hits1.append(hit1)\n",
+    "                hits2.append(hit2)\n",
+    "    DF_features[\"description\"][i] = \" ## \".join(hits1)\n",
+    "    DF_features[\"smiles\"][i] = \" ## \".join(hits2)\n",
+    "DF_features.to_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `3) GNPS annotations`\n",
+    "\n",
+    "This step is optional in case the user does not have an MGF file downloaded (or if they want to add complementary MSMS library matches) requires the file under the DB_result directory (downloaded cytoscape data) after FBMN. Move the .TSV table under the resources directory and annotate the FeatureMatrix according to SCAN numbers:"
    ]
   },
   {
@@ -215,13 +376,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Annotate the features detected by GNPS according to mz and RT (mz tolerance 10 ppm and RT tolerance 20 seconds: instrument and method-dependent)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -231,25 +385,6 @@
     "isExist= os.path.exists(path)\n",
     "if not isExist:\n",
     "    os.mkdir(path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add the SCAN number information to the annotated FeatureMatrix in order to match the GNPS MSMS library matching results:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Matrix= pd.read_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_annotated_FeatureMatrix.tsv\"), sep=\"\\t\")\n",
-    "Matrix[\"id\"]= Matrix[\"id\"].astype(str)\n",
-    "Matrix[\"feature_ids\"]= Matrix[\"feature_ids\"].values.tolist()\n",
-    "Matrix"
    ]
   },
   {
@@ -288,6 +423,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Matrix= pd.read_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\")\n",
+    "Matrix[\"id\"]= Matrix[\"id\"].astype(str)\n",
+    "Matrix[\"feature_ids\"]= Matrix[\"feature_ids\"].values.tolist()\n",
     "Matrix.insert(0, \"SCANS\", \"\")\n",
     "for i, id in zip(Matrix.index, Matrix[\"id\"]):\n",
     "    hits = []\n",
@@ -298,6 +436,13 @@
     "                hits.append(hit)\n",
     "    Matrix[\"SCANS\"][i] = \" ## \".join(hits)\n",
     "Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add the GNPS matches to the Matrix:"
    ]
   },
   {
@@ -316,46 +461,13 @@
     "            if hit not in hits:\n",
     "                hits.append(hit)\n",
     "    Matrix[\"GNPS\"][i] = \" ## \".join(hits)\n",
-    "\n",
-    "Matrix.to_csv(os.path.join(\"results\", \"annotations\", \"GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)\n",
-    "Matrix"
+    "Matrix.to_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Keep the unannotated features only"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Matrix= Matrix[Matrix.GNPS == \"\"]\n",
-    "Matrix= Matrix.drop(columns= \"GNPS\")\n",
-    "Matrix= Matrix.set_index([\"RT\", \"mz\"])\n",
-    "Matrix_tocsv= Matrix.reset_index()\n",
-    "Matrix_tocsv.to_csv(os.path.join(\"results\", \"annotations\", \"Matrix_unknowns.tsv\"), sep=\"\\t\", index =None)\n",
-    "Matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('pyopenms')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -369,9 +481,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1d92193107b2c1fde5349325fa7e4180df63966062ebb6172612daf2925f9acf"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
