spectral matcher correction

--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -15,7 +15,7 @@
     "sys.path.insert(0, '/Users/eeko/devel/openms_build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import pyteomics\n",
-    "from pyteomics import mztab\n"
+    "from pyteomics import mztab"
    ]
   },
   {
@@ -244,9 +244,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "database= glob.glob(os.path.join(\"resources\", \"GNPS-LIBRARY.mgf\"))\n",
+    "database= os.path.join(\"resources\", \"GNPS-LIBRARY.mgf\")\n",
     "speclib = MSExperiment()\n",
-    "MascotGenericFile().load(mgf_file, speclib)\n",
+    "MascotGenericFile().load(database, speclib)\n",
     "mztab= MzTab()\n",
     "output_mztab= os.path.join(\"results\", \"interim\", \"annotations\", \"MSMS.mzTab\")\n",
     "out_merged= \"\"\n",
