--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# `Preprocessing workflow`\n",
     "\n",
-    "#### The preprocessing workflow consists of seven steps:\n",
+    "#### The preprocessing workflow consists of ten steps:\n",
     "\n",
     "![Preprocessing.png](images/Preprocessing.png)"
    ]
