--- a/7_FBMN_data_integration.ipynb
+++ b/7_FBMN_data_integration.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### A Jupyter notebook for SIRIUS and FBMN integration.\n",
+    "#### `A Jupyter notebook for SIRIUS and FBMN integration.`\n",
     "\n",
+    "#### `1) SIRIUS and CSI:FingerID integration to GraphML file`\n",
     "This notebook requires a .graphml file generated from FBMN. Once you run the job, using the GNPSexport files, save the graphml file under the directory results/GNPSexport and run the following cells to add the SIRIUS and CSI information to the cytoscape file:"
    ]
   },
@@ -230,11 +231,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `2) MSMS GNPS annotations`\n",
+    "\n",
+    "This step is optional in case the user does not have an MGF file downloaded (or if they want to add complementary MSMS library matches) requires the file under the DB_result directory (downloaded cytoscape data) after FBMN. Move the .TSV table under the resources directory and annotate the FeatureMatrix according to SCAN numbers:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list= glob.glob(os.path.join(\"resources\", \"*.tsv\"))\n",
+    "for file in list:   \n",
+    "    df= pd.read_csv(file, sep=\"\\t\")\n",
+    "    df.drop(df.index[df['IonMode'] == \"negative\"], inplace=True)\n",
+    "    df.drop(df.index[df['MZErrorPPM'] > 10.0], inplace=True)\n",
+    "    GNPS=df.drop_duplicates(subset=\"Compound_Name\", keep='first')\n",
+    "    GNPS[\"#Scan#\"]= GNPS[\"#Scan#\"].astype(str)\n",
+    "GNPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= os.path.join(\"results\", \"annotations\")\n",
+    "isExist= os.path.exists(path)\n",
+    "if not isExist:\n",
+    "    os.mkdir(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Turn the MGF file to a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
+    "file= mgf.MGF(source=path, use_header=True, convert_arrays=2, read_charges=True, read_ions=False, dtype=None, encoding=None)\n",
+    "parameters=[]\n",
+    "for spectrum in file:\n",
+    "    parameters.append(spectrum['params'])\n",
+    "mgf_file= pd.DataFrame(parameters)\n",
+    "mgf_file[\"feature_id\"]= mgf_file[\"feature_id\"].str.replace(r\"e_\", \"\")\n",
+    "mgf_file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add SCANS column to the Feature Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix= pd.read_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\")\n",
+    "Matrix[\"id\"]= Matrix[\"id\"].astype(str)\n",
+    "Matrix[\"feature_ids\"]= Matrix[\"feature_ids\"].values.tolist()\n",
+    "Matrix.insert(0, \"SCANS\", \"\")\n",
+    "for i, id in zip(Matrix.index, Matrix[\"id\"]):\n",
+    "    hits = []\n",
+    "    for scan, feature_id in zip(mgf_file[\"scans\"], mgf_file[\"feature_id\"]): \n",
+    "        if feature_id==id:\n",
+    "            hit = f\"{scan}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
+    "    Matrix[\"SCANS\"][i] = \" ## \".join(hits)\n",
+    "Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add the GNPS matches to the Matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix.insert(0, \"GNPS\", \"\")\n",
+    "\n",
+    "for i, scan in zip(Matrix.index, Matrix[\"SCANS\"]):\n",
+    "    hits = []\n",
+    "    for name, scan_number, in zip(GNPS[\"Compound_Name\"], GNPS[\"#Scan#\"]):\n",
+    "        if scan==scan_number:\n",
+    "            hit = f\"{name}\"\n",
+    "            if hit not in hits:\n",
+    "                hits.append(hit)\n",
+    "    Matrix[\"GNPS\"][i] = \" ## \".join(hits)\n",
+    "Matrix.to_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)"
+   ]
   }
  ],
  "metadata": {
