--- a/7_FBMN_data_integration.ipynb
+++ b/7_FBMN_data_integration.ipynb
@@ -306,7 +306,7 @@
     "Matrix= pd.read_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\")\n",
     "Matrix[\"id\"]= Matrix[\"id\"].astype(str)\n",
     "Matrix[\"feature_ids\"]= Matrix[\"feature_ids\"].values.tolist()\n",
-    "Matrix.insert(0, \"SCANS\", \"\")\n",
+    "Matrix.insert(0, \"SCAN_IDS\", \"\")\n",
     "for i, id in zip(Matrix.index, Matrix[\"id\"]):\n",
     "    hits = []\n",
     "    for scan, feature_id in zip(mgf_file[\"scans\"], mgf_file[\"feature_id\"]): \n",
@@ -314,7 +314,7 @@
     "            hit = f\"{scan}\"\n",
     "            if hit not in hits:\n",
     "                hits.append(hit)\n",
-    "    Matrix[\"SCANS\"][i] = \" ## \".join(hits)\n",
+    "    Matrix[\"SCAN_IDS\"][i] = \" ## \".join(hits)\n",
     "Matrix"
    ]
   },
@@ -333,7 +333,7 @@
    "source": [
     "Matrix.insert(0, \"GNPS\", \"\")\n",
     "\n",
-    "for i, scan in zip(Matrix.index, Matrix[\"SCANS\"]):\n",
+    "for i, scan in zip(Matrix.index, Matrix[\"SCAN_IDS\"]):\n",
     "    hits = []\n",
     "    for name, scan_number, in zip(GNPS[\"Compound_Name\"], GNPS[\"#Scan#\"]):\n",
     "        if scan==scan_number:\n",
@@ -341,6 +341,7 @@
     "            if hit not in hits:\n",
     "                hits.append(hit)\n",
     "    Matrix[\"GNPS\"][i] = \" ## \".join(hits)\n",
+    "    Matrix= Matrix.drop(columns=[\"SCAN_IDS\"])\n",
     "Matrix.to_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_GNPS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)"
    ]
   }
