--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Determination of memory status is not supported on this \n",
+      " platform, measuring for memoryleaks will never fail\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -330,8 +339,8 @@
     "                hits.append(hit)\n",
     "    DF_features[\"SCANS\"][i] = \" ## \".join(hits)\n",
     "\n",
-    "DF_features.insert(0, \"description\", \"\")\n",
-    "DF_features.insert(0, \"smiles\", \"\")\n",
+    "DF_features.insert(0, \"SpectralMatch\", \"\")\n",
+    "DF_features.insert(0, \"SpectralMatch_smiles\", \"\")\n",
     "\n",
     "for i, scan in zip(DF_features.index, DF_features[\"SCANS\"]):\n",
     "    hits1 = []\n",
@@ -343,8 +352,8 @@
     "            if hit1 not in hits1:\n",
     "                hits1.append(hit1)\n",
     "                hits2.append(hit2)\n",
-    "    DF_features[\"description\"][i] = \" ## \".join(hits1)\n",
-    "    DF_features[\"smiles\"][i] = \" ## \".join(hits2)\n",
+    "    DF_features[\"SpectralMatch\"][i] = \" ## \".join(hits1)\n",
+    "    DF_features[\"SpectralMatch_smiles\"][i] = \" ## \".join(hits2)\n",
     "DF_features.to_csv(os.path.join(\"results\", \"annotations\", \"SiriusCSI_MSMS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\", index = False)"
    ]
   }
