--- a/5_SIRIUS_CSI.ipynb
+++ b/5_SIRIUS_CSI.ipynb
@@ -23,8 +23,6 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "import sys\n",
-    "sys.path.insert(0, '/Users/eeko/devel/openms_build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import shutil\n",
     "from pathlib import Path"
@@ -36,17 +34,16 @@
    "metadata": {},
    "source": [
     "#### `1) SIRIUS Adapter`\n",
-    "The SIRIUS function is optional and includes the SIRIUS Adapter Algorithm from the Boecher lab. \n",
     "\n",
+    "The SIRIUS function is optional and includes the SIRIUS Adapter Algorithm from the Boecher lab. \n",
     "\n",
     "The algorithm generates formula predictions from scores calculated from 1) MS2 fragmentation scores (ppm error + intensity) and 2) MS1 isotopic pattern scores.\n",
     "\n",
-    "\n",
-    "It can only compute feautures that are singly charged. There is also a compound timeout so that it doesn\"t compute for longer than 100 seconds per feature, which normally happens with larger molecules.\n",
+    "It can only compute feautures that are singly charged. There is also a compound timeout so that it doesnt compute for too long per feature, which normally happens with larger molecules.\n",
     "        \n",
     ">-sirius:compound_timeout <number>                    \n",
     "\n",
-    ">Maximal computation time in seconds for a single compound. 0 for an infinite amount of time. (default: \"100\" min: \"0\")\n",
+    ">Maximal computation time in seconds for a single compound. -1 for an infinite amount of time. (default: \"-1\")\n",
     "\n",
     "#### `2) CSI:FingerID`\n",
     "\n",
@@ -54,7 +51,7 @@
     "\n",
     "If you replace: \n",
     "    \n",
-    ">out_csifingerid = os.path.join(\"results\", \"\", \"interim\", \"\", \"CSI\", \"\", \"structures_\" + os.path.basename(filename) +\".mzTab\")\n",
+    ">out_csifingerid = os.path.join(path, \"structures_\" + os.path.basename(filename)[11:-5] +\".mzTab\")\n",
     "\n",
     "with an empty string:\n",
     "\n",
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7e793c80",
    "metadata": {},
    "outputs": [],
@@ -163,6 +160,13 @@
     "                                candidates,\n",
     "                                sirius_result)\n",
     "\n",
+    "            csi_result= MzTab()\n",
+    "            CsiFingerIdMzTabWriter.read(subdirs, \n",
+    "                                    filename, \n",
+    "                                    sirius_algo.getNumberOfSiriusCandidates(), \n",
+    "                                    csi_result)\n",
+    "            \n",
+    "            MzTabFile().store(out_csifingerid, csi_result)\n",
     "            sirius_file= os.path.join(path,\"formulas_\" + os.path.basename(filename)[11:-5] +\".mzTab\")\n",
     "            siriusfile.store(sirius_file, sirius_result)"
    ]
