tree timeout and column renaming

--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -538,6 +538,7 @@
     "df[\"feature_ids\"] = [[handle.getUniqueId() for handle in cf.getFeatureList()] for cf in consensus_map]\n",
     "df= df.reset_index()\n",
     "df= df.drop(columns= [\"sequence\"])\n",
+    "df= df.rename(columns={\"RT\": \"RT(s)\", \"mz\" :\"m/z\"})\n",
     "# store as tsv file\n",
     "df.to_csv(os.path.join(\"results\", \"features\", \"FeatureMatrix.tsv\"), sep = \"\\t\", index = False)\n",
     "df"
