--- a/5_SIRIUS_CSI.ipynb
+++ b/5_SIRIUS_CSI.ipynb
@@ -110,7 +110,6 @@
     "            sirius_algo = SiriusAdapterAlgorithm()\n",
     "            sirius_algo_par = sirius_algo.getDefaults()\n",
     "            sirius_algo_par.setValue(\"sirius:compound_timeout\", 100)\n",
-    "            sirius_algo_par.setValue(\"sirius:tree_timeout\", 100)\n",
     "            sirius_algo_par.setValue(\"preprocessing:filter_by_num_masstraces\", 2) #Number of mass traces each feature has to have to be included\n",
     "            sirius_algo_par.setValue(\"preprocessing:feature_only\", \"true\") #Uses the feature information from in_fm_no_sub to reduce the search space to MS2\n",
     "            sirius_algo_par.setValue(\"sirius:profile\", \"orbitrap\")\n",
@@ -253,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.10.4 ('pyopenms')",
    "language": "python",
    "name": "python3"
   },
@@ -267,12 +266,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1d92193107b2c1fde5349325fa7e4180df63966062ebb6172612daf2925f9acf"
+    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
    }
   }
  },
